# trait_fields

./: Cargo.toml  LICENSE
src/: lib.rs
src/proc_macro/: Cargo.toml  macros.rs  mod.rs
